--- a/00a.maindashboard.html
+++ b/00a.maindashboard.html
@@ -3,66 +3,353 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Choose Property Location</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <title>Choose Location</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      min-height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+    #map {
+      height: 100vh;
+      width: 100%;
+    }
+    .location-form {
+      position: absolute;
+      bottom: 1rem;         /* ⬅ Pushes form closer to bottom */
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90%;
+      max-width: 400px;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      padding: 1rem;
+      z-index: 1000;
+    }
+
+    .location-form .form-control,
+    .location-form .form-select {
+      font-size: 0.9rem;
+      padding: 0.3rem 0.5rem;
+    }
+
+    #propertyForm {
+      transition: max-height 0.3s ease, opacity 0.3s ease;
+      overflow: hidden;
+    }
+
+    .hidden {
+      max-height: 0 !important;
+      padding: 0 !important;
+      margin: 0 !important;
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    footer {
+      margin-top: auto;
+    }
+
+  </style>
 </head>
-<body class="bg-light">
+  <body>
 
-  <div class="container py-5">
-    <div class="card shadow-sm">
-      <div class="card-header bg-dark text-white">
-        <h6 class="mb-0">Step 1: Choose Your Property Location</h6>
+    <!-- MAP -->
+    <div id="map"></div>
+
+    <!-- Property Panel -->
+    <div id="propertyPanel" class="card p-3 shadow position-absolute top-0 start-50 translate-middle-x mt-4" style="z-index: 1000; width: 90%; max-width: 400px;">
+      <div class="d-flex justify-content-between align-items-center mb-2">
+        <h6 class="fw-bold mb-0">Step 1: Choose Your Property Location</h6>
+        <button id="minimizeBtn" class="btn btn-sm btn-outline-secondary">−</button>
       </div>
-      <div class="card-body">
 
-        <!-- County Dropdown -->
-        <div class="mb-3">
-          <label for="countySelect" class="form-label">Select Your County</label>
-          <select class="form-select" id="countySelect" required>
-            <option value="" selected disabled>Choose...</option>
-            <option value="Bell">Bell</option>
-            <option value="Burnet">Burnet</option>
-            <option value="Travis">Travis</option>
-            <option value="Washington">Washington</option>
-            <option value="Williamson">Williamson</option>
+      <div id="propertyForm">
+        <!-- Your existing form starts here -->
+        <div class="mb-2">
+          <label class="form-label small">Select Your County</label>
+          <select class="form-select" id="countySelect">
+            <option selected disabled>Choose...</option>
+            <option>Bell</option>
+            <option>Burnet</option>
+            <option>Travis</option>
+            <option>Washington</option>
+            <option>Williamson</option>
           </select>
         </div>
 
-        <!-- OR Inputs -->
-        <div class="mb-3">
-          <label class="form-label">Enter Property Address</label>
-          <input type="text" class="form-control" placeholder="123 Main St, City, ZIP" />
+        <div class="mb-2">
+          <label class="form-label small">Enter Property Address</label>
+          <input type="text" class="form-control" id="addressInput" placeholder="123 Main St, City, ZIP" />
         </div>
 
-        <div class="text-center mb-3">
-          <span class="text-muted">or</span>
+        <div class="text-center mb-1"><small class="text-muted">or</small></div>
+
+        <div class="mb-2">
+          <label class="form-label small">Enter Parcel ID #</label>
+          <input type="text" id="parcelInput" class="form-control" placeholder="e.g. 1234567890000" />
         </div>
 
-        <div class="mb-3">
-          <label class="form-label">Enter Parcel ID #</label>
-          <input type="text" class="form-control" placeholder="e.g. 1234567890000" />
-        </div>
+        <div class="text-center mb-1"><small class="text-muted">or</small></div>
 
-        <div class="text-center mb-3">
-          <span class="text-muted">or</span>
-        </div>
-
-        <div class="mb-3">
-          <label class="form-label">Enter Coordinates</label>
-          <div class="input-group mb-2">
-            <input type="text" class="form-control" placeholder="Latitude e.g. 30.2672" />
-            <input type="text" class="form-control" placeholder="Longitude e.g. -97.7431" />
+        <div class="mb-2">
+          <label class="form-label small">Enter Coordinates</label>
+          <div class="input-group">
+            <input type="text" class="form-control" id="latitude" placeholder="Latitude e.g. 30.267" />
+            <input type="text" class="form-control" id="longitude" placeholder="Longitude e.g. -97.7" />
           </div>
         </div>
 
-        <!-- Continue Button -->
-        <div class="d-grid">
-          <a href="/00b.dashboard.html" class="btn btn-dark">Continue</button>
+        <div class="d-grid mt-3">
+          <button id="continueBtn" class="btn btn-dark btn-sm">Continue</button>
         </div>
       </div>
     </div>
-  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <!-- SCRIPTS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script>
+      const map = L.map('map').setView([30.2672, -97.7431], 10); // Austin TX
+
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap contributors'
+      }).addTo(map);
+
+      let marker;
+      map.on('click', function (e) {
+        const { lat, lng } = e.latlng;
+        document.getElementById('latitude').value = lat.toFixed(6);
+        document.getElementById('longitude').value = lng.toFixed(6);
+
+        if (marker) marker.remove();
+        marker = L.marker([lat, lng]).addTo(map);
+      });
+    </script>
+    <script>
+      const countyCenters = {
+        Bell: [31.0393, -97.4645],
+        Burnet: [30.7846, -98.2280],
+        Travis: [30.2672, -97.7431],
+        Washington: [30.2003, -96.3977],
+        Williamson: [30.6417, -97.6531]
+      };
+
+      document.getElementById("countySelect").addEventListener("change", function () {
+        const county = this.value;
+        const center = countyCenters[county];
+
+        if (center) {
+          map.setView(center, 12);
+        }
+      });
+    </script>
+    <script>
+      document.getElementById("addressInput").addEventListener("blur", function () {
+        const address = this.value;
+        if (!address) return;
+
+        const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(address)}`;
+
+        fetch(url)
+          .then(response => response.json())
+          .then(data => {
+            if (data.length > 0) {
+              const lat = parseFloat(data[0].lat);
+              const lon = parseFloat(data[0].lon);
+
+              map.setView([lat, lon], 17);
+
+              // Update coordinate input boxes
+              document.getElementById("latitude").value = lat.toFixed(6);
+              document.getElementById("longitude").value = lon.toFixed(6);
+
+              // Add marker
+              if (marker) marker.remove();
+              marker = L.marker([lat, lon]).addTo(map);
+            } else {
+              alert("Address not found. Please try a more specific location.");
+            }
+          })
+          .catch(err => {
+            console.error("Geocoding error:", err);
+            alert("Failed to find the location.");
+          });
+      });
+    </script>
+    <script>
+      document.getElementById("continueBtn").addEventListener("click", function () {
+        const county = document.getElementById("countySelect").value;
+        const address = document.getElementById("addressInput").value.trim();
+        const lat = document.getElementById("latitude").value.trim();
+        const lon = document.getElementById("longitude").value.trim();
+
+        let userLocation = "";
+
+        if (address !== "") {
+          userLocation = `${address}${county ? ", " + county + " County" : ""}`;
+        } else if (lat !== "" && lon !== "") {
+          userLocation = `Coordinates: ${lat}, ${lon}${county ? " (" + county + " County)" : ""}`;
+        } else {
+          userLocation = county ? `${county} County` : "No location selected";
+        }
+
+        // ✅ ADD THIS LINE
+        localStorage.setItem("selectedCounty", county);
+
+        localStorage.setItem("selectedLocation", userLocation);
+
+        window.location.href = "00b.dashboard.html";
+      });
+    </script>
+    
+    <script>
+      // Load and display Burnet parcels
+      fetch("./assets/data/burnet_parcels.geojson")
+        .then(response => response.json())
+        .then(geojsonData => {
+          L.geoJSON(geojsonData, {
+            style: {
+              color: "#cc0000",
+              weight: 1
+            },
+            onEachFeature: function (feature, layer) {
+              layer.on('click', function (e) {
+                const parcelID = feature.properties.Prop_ID || 'No ID';
+                const address = feature.properties.SITUS_ADDR || 'No address';
+                const lat = e.latlng.lat.toFixed(6);
+                const lng = e.latlng.lng.toFixed(6);
+
+                // Update form fields
+                document.getElementById('parcelInput').value = parcelID;
+                document.getElementById('addressInput').value = address;
+                document.getElementById('latitude').value = lat;
+                document.getElementById('longitude').value = lng;
+
+                // Save to localStorage
+                localStorage.setItem('parcelID', parcelID);
+                localStorage.setItem('parcelAddress', address);
+                localStorage.setItem('latitude', lat);
+                localStorage.setItem('longitude', lng);
+
+                // 👉 Save for dashboard reference
+                const selectedLocation = `${address}, ${parcelID}, ${lat}, ${lng}`;
+                localStorage.setItem('selectedLocation', selectedLocation);
+
+                // Optional popup
+                layer.bindPopup(
+                  `<b>Parcel ID:</b> ${parcelID}<br><b>Address:</b> ${address}`
+                ).openPopup();
+              });
+            }
+          }).addTo(map);
+        });
+    </script>
+
+    <!-- Disclaimer Modal -->
+    <div class="modal fade" id="disclaimerModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header bg-dark text-white">
+            <h5 class="modal-title">Disclaimer</h5>
+          </div>
+          <div class="modal-body">
+            <p>
+              This tool is for **preliminary estimation purposes only**. 
+              The figures shown here are **not to be used for official bidding**, 
+              nor as a final basis for contracting, financing, or purchasing. 
+              Contact LHT professionals to verify and validate your computed 
+              estimate.
+            </p>
+            <div class="form-check mt-3">
+              <input class="form-check-input" type="checkbox" id="agreeCheckbox">
+              <label class="form-check-label" for="agreeCheckbox">
+                I understand and agree to the terms stated above.
+              </label>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-dark" id="agreeBtn" disabled>Agree and Continue</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      if (!localStorage.getItem("lht_registered_user")) {
+      window.location.href = "index.html";
+      }
+    </script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        {//if (!localStorage.getItem("disclaimerAgreed")) {
+          const modal = new bootstrap.Modal(document.getElementById("disclaimerModal"), {
+            backdrop: 'static',
+            keyboard: false
+          });
+          modal.show();
+
+          const checkbox = document.getElementById("agreeCheckbox");
+          const btn = document.getElementById("agreeBtn");
+
+          checkbox.addEventListener("change", () => {
+            btn.disabled = !checkbox.checked;
+          });
+
+          btn.addEventListener("click", () => {
+            //localStorage.setItem("disclaimerAgreed", "true");
+            modal.hide();
+          });
+        }
+      });
+    </script>
+
+    <script>
+      const minimizeBtn = document.getElementById("minimizeBtn");
+      const propertyForm = document.getElementById("propertyForm");
+      let isMinimized = false;
+
+      minimizeBtn.addEventListener("click", () => {
+        isMinimized = !isMinimized;
+        propertyForm.classList.toggle("hidden", isMinimized);
+        minimizeBtn.textContent = isMinimized ? "+" : "−";
+      });
+
+      // Restore when property is selected
+      function propertyChosen(lat, lng) {
+        localStorage.setItem("latitude", lat);
+        localStorage.setItem("longitude", lng);
+
+        if (isMinimized) {
+          propertyForm.classList.remove("hidden");
+          minimizeBtn.textContent = "−";
+          isMinimized = false;
+        }
+      }
+    </script>
+
+    <footer class="bg-light text-center text-muted small py-2 border-top mt-4">
+      ⚠️ <strong>Disclaimer:</strong> All estimated costs in this app are for ballpark reference only and should not be used for bidding or final project costing.
+    </footer>
+
+
+
+
+
+
+  </body>
 </html>
