--- a/01landacquisitioncost.html
+++ b/01landacquisitioncost.html
@@ -1,121 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Land Purchase Cost</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-</head>
-<body class="bg-light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Land Purchase Cost</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-  <!-- Header -->
-  <nav class="navbar lime-header bg-dark px-3">
-    <div class="container-fluid text-white">
-      <a href="00b.dashboard.html" class="btn btn-sm btn-outline-light me-2">← Back</a>
-      <span class="navbar-brand mb-0 h6 text-white">Land Purchase Cost</span>
-    </div>
-  </nav>
+    <style>
+      @media (max-width: 400px) {
+        .form-check-label {
+          font-size: 0.85rem;
+        }
+        .form-label {
+          font-size: 0.9rem;
+        }
+        .container {
+          padding-left: 12px;
+          padding-right: 12px;
+        }
+      }
+    </style>
 
-  <!-- Form Body -->
-  <div class="container py-4">
-    <form id="landPurchaseForm">
+  </head>
+  <body class="bg-light">
 
-      <div class="mb-3">
-        <label class="form-label">Listing Price ($)</label>
-        <input type="number" class="form-control" placeholder="e.g. 120000" required />
+      <!-- Header -->
+      <nav class="navbar lime-header bg-dark px-3">
+          <div class="container-fluid text-white">
+            <a href="00b.dashboard.html" class="btn btn-sm btn-outline-light me-2">← Back</a>
+            <span class="navbar-brand mb-0 h6 text-white">Land Purchase Cost</span>
+          </div>
+      </nav>
+
+      <!--- Picked Property Details --->
+      <div class="mb-3 bg-light border rounded small p-2">
+          <div><strong>Address:</strong> <span id="summaryAddress">Loading...</span></div>
+          <div><strong>Parcel ID:</strong> <span id="summaryParcelID">Loading...</span></div>
+          <div><strong>Coordinates:</strong> <span id="summaryCoords">Loading...</span></div>
       </div>
 
-      <div class="mb-3">
-        <label class="form-label">Earnest Money Deposit (%)</label>
-        <input type="number" class="form-control" placeholder="e.g. 1.5" />
+      <!-- Form Body -->
+        <!-- Listing Price with Toggle -->
+        <div class="mb-3">
+          <div class="d-flex justify-content-between align-items-center">
+            <label class="form-label mb-0">Listing Price ($)</label>
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="toggleListingPrice">
+              <label class="form-check-label small" for="toggleListingPrice">I know the price</label>
+            </div>
+          </div>
+          <input type="number" id="listingPrice" class="form-control" placeholder="Enter price" disabled />
+        </div>
+
+        <div class="row mb-2">
+          <div class="col-8">Earnest Money Deposit (1.5%)</div>
+          <div class="col-4" id="earnestDeposit">$0</div>
+        </div>
+
+        <div class="row mb-2">
+          <div class="col-8">Title Insurance</div>
+          <div class="col-4" id="titleInsurance">$900</div>
+        </div>
+
+        <div class="row mb-2">
+          <div class="col-8">Survey Fee</div>
+          <div class="col-4" id="surveyFee">$600</div>
+        </div>
+
+        <div class="row mb-2">
+          <div class="col-8">Closing Costs (3%)</div>
+          <div class="col-4" id="closingCosts">$0</div>
+        </div>
+
+        <div class="row mb-2">
+          <div class="col-8">Prorated Property Tax</div>
+          <div class="col-4" id="propertyTax">$1200</div>
+        </div>
+
+        <div class="row mb-2">
+          <div class="col-8">HOA/POA Transfer Fee</div>
+          <div class="col-4" id="hoaTransferFee">$350</div>
+        </div>
+
+        <div class="row mb-2">
+          <div class="col-8">Option Fee for Inspection</div>
+          <div class="col-4" id="inspectionFee">$100</div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-8">Loan Origination Fee</div>
+          <div class="col-4" id="loanFee">$750</div>
+        </div>
+
+        <div class="row border-top pt-2">
+          <div class="col-8"><strong>Total Land Acquisition Cost</strong></div>
+          <div class="col-4"><strong id="totalCost">$3900</strong></div>
+        </div>
       </div>
 
-      <div class="mb-3">
-        <label class="form-label">Title Insurance ($)</label>
-        <input type="number" class="form-control" placeholder="e.g. 900" />
+          <button id="totalResult" class="btn btn-dark" style="max-width: 180px; margin: 20px;" onclick="saveAndContinue()">Save</button>
       </div>
 
-      <div class="mb-3">
-        <label class="form-label">Survey Fee ($)</label>
-        <input type="number" class="form-control" placeholder="e.g. 600" />
+      <div class="d-flex justify-content-between gap-2 mt-4" style="max-width: 100%;">
+        <a href="./08duediligence.html" class="btn btn-outline-secondary w-100">
+          Next Step ➡️
+        </a>
       </div>
 
-      <div class="mb-3">
-        <label class="form-label">Closing Costs (%)</label>
-        <input type="number" class="form-control" placeholder="e.g. 3" />
+      <div class="d-grid gap-2 mt-3">
+        <a href="00b.dashboard.html" class="btn btn-dark">
+          🏠 Back to Cost Dashboard
+        </a>
+        <a href="./09finalstep.html" class="btn btn-outline-dark">
+          ✅ Review Your Estimate with LHT
+        </a>
       </div>
 
-      <div class="mb-3">
-        <label class="form-label">Prorated Property Tax ($)</label>
-        <input type="number" class="form-control" placeholder="e.g. 1200" />
-      </div>
+    <script>
+      function formatUSD(num) {
+        return '$' + Number(num).toLocaleString();
+      }
 
-      <div class="mb-3">
-        <label class="form-label">HOA/POA Transfer Fee ($)</label>
-        <input type="number" class="form-control" placeholder="e.g. 350" />
-      </div>
+      function parseUSD(str) {
+        return parseFloat(str.replace(/[$,]/g, '')) || 0;
+      }
 
-      <div class="mb-3">
-        <label class="form-label">Option Fee for Inspection ($)</label>
-        <input type="number" class="form-control" placeholder="e.g. 100" />
-      </div>
+      function calculateCosts() {
+        const listingPrice = parseFloat(localStorage.getItem('selectedListingPrice')) || 0;
 
-      <div class="mb-3">
-        <label class="form-label">Loan Origination Fee ($)</label>
-        <input type="number" class="form-control" placeholder="e.g. 750" />
-      </div>
+        const earnest = listingPrice * 0.015;
+        const closing = listingPrice * 0.03;
 
-      <div class="mb-3">
-        <label class="form-label">Appraisal Fee ($)</label>
-        <input type="number" class="form-control" placeholder="e.g. 450" />
-      </div>
+        const fixed = {
+          titleInsurance: 900,
+          survey: 600,
+          proratedTax: 1200,
+          hoaFee: 350,
+          optionFee: 100,
+          loanFee: 750
+        };
 
-      <div class="mb-3">
-        <label class="form-label">Escrow Reserves ($)</label>
-        <input type="number" class="form-control" placeholder="e.g. 1800" />
-      </div>
+        const total =
+          listingPrice +
+          earnest +
+          fixed.titleInsurance +
+          fixed.survey +
+          closing +
+          fixed.proratedTax +
+          fixed.hoaFee +
+          fixed.optionFee +
+          fixed.loanFee;
 
-      <!-- Total -->
-      <div class="my-4">
-        <button type="submit" class="btn btn-dark w-100">Calculate Total</button>
-      </div>
+        // Display values
+        document.getElementById("listingPrice").value = formatUSD(listingPrice);
+        document.getElementById("earnestMoney").value = formatUSD(earnest);
+        document.getElementById("closingCosts").value = formatUSD(closing);
+        document.getElementById("totalCost").value = formatUSD(total);
 
-    </form>
+        // Store for next module
+        localStorage.setItem("landPurchaseCost", total.toFixed(2));
+      }
 
-    <div id="totalResult" class="alert alert-success d-none"></div>
-  </div>
+      function saveAndContinue() {
+        alert("Cost saved. Proceeding..."); 
+      }
 
-  <div class="mt-4">
-  <div class="d-grid gap-3">
-    <a href="contact-lht.html" class="btn btn-outline-dark">
-      💬 Talk to an LHT Expert
-    </a>
-    <a href="00b.dashboard.html" class="btn btn-dark">
-      ➕ Proceed with Estimating Other Items
-    </a>
-  </div>
-</div>
+      window.onload = calculateCosts;
+    </script>
 
-  <script>
-    document.getElementById('landPurchaseForm').addEventListener('submit', function (e) {
-      e.preventDefault();
+    <script>
+      // Load from localStorage and display selected parcel info
+      const address = localStorage.getItem("parcelAddress") || "N/A";
+      const parcelID = localStorage.getItem("parcelID") || "N/A";
+      const lat = localStorage.getItem("latitude") || "N/A";
+      const lng = localStorage.getItem("longitude") || "N/A";
 
-      const inputs = this.querySelectorAll('input');
-      let total = 0;
+      document.getElementById("summaryAddress").textContent = address;
+      document.getElementById("summaryParcelID").textContent = parcelID;
+      document.getElementById("summaryCoords").textContent = `${lat}, ${lng}`;
+    </script>
 
-      inputs.forEach(input => {
-        const val = parseFloat(input.value);
-        if (!isNaN(val)) total += val;
+    <script>
+      document.getElementById("toggleListingPrice").addEventListener("change", function () {
+        const input = document.getElementById("listingPrice");
+        if (this.checked) {
+          input.disabled = false;
+          input.focus();
+        } else {
+          input.disabled = true;
+          input.value = "";
+          localStorage.removeItem("selectedListingPrice");
+          calculateCosts(); // optional if dynamic calc
+        }
       });
 
-      document.getElementById('totalResult').textContent = `Estimated Total Cost: $${total.toLocaleString()}`;
-      document.getElementById('totalResult').classList.remove('d-none');
-    });
-  </script>
+      document.getElementById("listingPrice").addEventListener("input", function () {
+        const value = parseFloat(this.value) || 0;
+        localStorage.setItem("selectedListingPrice", value);
+        calculateCosts(); // optional if computing totals
+      });
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+      function calculateCosts() {
+        // placeholder for real calculation logic
+        const listingPrice = parseFloat(localStorage.getItem("selectedListingPrice")) || 0;
+        const earnest = (listingPrice * 0.015).toFixed(2);
+        const closing = (listingPrice * 0.03).toFixed(2);
+        const total = (
+          listingPrice +
+          parseFloat(earnest) +
+          900 + // titleInsurance
+          600 + // surveyFee
+          parseFloat(closing) +
+          1200 + // propertyTax
+          350 + // hoaTransferFee
+          100 + // inspectionFee
+          750    // loanFee
+        ).toFixed(2);
+
+        document.getElementById("earnestDeposit").innerText = `$${earnest}`;
+        document.getElementById("closingCosts").innerText = `$${closing}`;
+        document.getElementById("totalCost").innerText = `$${total}`;
+      }
+
+      // preload if user came back and had previous value
+      if (localStorage.getItem("selectedListingPrice")) {
+        document.getElementById("toggleListingPrice").checked = true;
+        const value = localStorage.getItem("selectedListingPrice");
+        document.getElementById("listingPrice").value = value;
+        document.getElementById("listingPrice").disabled = false;
+        calculateCosts();
+      }
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <footer class="bg-light text-center text-muted small py-2 border-top mt-4">
+      ⚠️ <strong>Disclaimer:</strong> All estimated costs in this app are for ballpark reference only and should not be used for bidding or final project costing.
+    </footer>
+  </body>
 </html>
